更新合約元件，重構合約展開邏輯，改為使用 Set 來管理展開的合約，提升程式碼可讀性與維護性。同時優化請款紀錄顯示邏輯，以增強用戶體驗。

--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -82,7 +82,7 @@
               <app-file [contract]="contract" [uploadingContractCode]="uploadingContractCode" (uploading)="onUploading($event)" (uploaded)="onUploaded($event)"></app-file>
             </td>
           </tr>
-          <tr *ngIf="contract.expanded">
+          <tr *ngIf="expandedContracts.has(contract.code)">
             <td colspan="12">
               <div class="flex flex-col gap-2">
                 <span>請款紀錄：</span>
