--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -71,12 +71,18 @@
               </div>
             </td>
             <td (click)="$event.stopPropagation()">
-              <button pButton type="button" icon="pi pi-info-circle" class="p-button-text p-0"
-                (click)="toggleExpand(contract, $event)">詳細</button>
+              <button
+                pButton
+                type="button"
+                [icon]="expandedContracts.has(contract.code) ? 'pi pi-angle-up' : 'pi pi-angle-down'"
+                class="p-button-text p-0"
+                (click)="toggleExpand(contract, $event)"
+              >
+              </button>
             </td>
             <td (click)="$event.stopPropagation()">
               <button pButton type="button" icon="pi pi-plus-circle" class="p-button-text p-0"
-                (click)="requestComponent.open(contract, user)">申請</button>
+                (click)="requestComponent.open(contract, user)"></button>
             </td>
             <td (click)="$event.stopPropagation()">
               <app-file [contract]="contract" [uploadingContractCode]="uploadingContractCode" (uploading)="onUploading($event)" (uploaded)="onUploaded($event)"></app-file>
@@ -98,7 +104,7 @@
                     <!-- 狀態操作按鈕群 -->
                     <span class="action-col">
                       <ng-container *ngIf="p.status === '初始'">
-                        <button pButton type="button" label="送出申請" icon="pi pi-send" class="p-button-sm mb-1" (click)="toStatus(contract, p, '申請中')"></button>
+                        <button pButton type="button" label="送出" icon="pi pi-send" class="p-button-sm mb-1" (click)="toStatus(contract, p, '申請中')"></button>
                       </ng-container>
                       <ng-container *ngIf="p.status === '申請中'">
                         <button pButton type="button" label="送審" icon="pi pi-check-square" class="p-button-sm mb-1" (click)="toStatus(contract, p, '審核中')"></button>
