更新合約元件，調整合約列表表格的樣式與滾動行為，以提升用戶互動性與資訊呈現的清晰度。

--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -18,8 +18,17 @@
       <!-- 組織圖 -->
       <app-organizational [contract]="selectedContract" [defaultLabel]="selectedContract?.projectName || '專案團隊'"></app-organizational>
       <!-- 合約列表 Table -->
-      <p-table [value]="contracts" styleClass="p-datatable-sm w-full" [tableStyle]="{ 'font-size': '13px' }" [responsiveLayout]="'scroll'"
-        selectionMode="single" [(selection)]="selectedContract" dataKey="code" [rowHover]="true"
+      <p-table
+        [value]="contracts"
+        scrollable="true"
+        scrollHeight="flex"
+        styleClass="p-datatable-sm w-full"
+        [tableStyle]="{ 'font-size': '13px' }"
+        [responsiveLayout]="'scroll'"
+        selectionMode="single"
+        [(selection)]="selectedContract"
+        dataKey="code"
+        [rowHover]="true"
         (onRowSelect)="onRowSelect($event)">
         <ng-template pTemplate="header">
           <tr>
