--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -150,9 +150,16 @@
             </td>
           </tr>
         </ng-template>
+        <!-- 表格底部：建立合約按鈕 -->
+        <ng-template pTemplate="footer">
+          <tr>
+            <td colspan="8" class="text-center p-0">
+              <button pButton type="button" class="p-button-text" (click)="showStepper = true">＋ 建立合約</button>
+            </td>
+          </tr>
+        </ng-template>
       </p-table>
-      <!-- 建立合約按鈕與對話框 -->
-      <button pButton type="button" label="建立合約" (click)="showStepper = true" class="mt-4 w-full"></button>
+      <!-- 建立合約對話框 -->
       <p-dialog [(visible)]="showStepper" [modal]="true" [closable]="true" [dismissableMask]="true" [style]="{width: '480px'}" header="建立合約" (onHide)="showStepper = false">
         <app-stepbutton (contractCreated)="onStepperCreated($event)"></app-stepbutton>
       </p-dialog>
