--- a/src/app/components/contract/stepbutton/request/request.component.html
+++ b/src/app/components/contract/stepbutton/request/request.component.html
@@ -1,20 +1,21 @@
 <p-dialog [(visible)]="visible" [modal]="true" [closable]="true" header="申請請款" [style]="{width: '400px'}">
   <div *ngIf="contract" class="request-container">
     <form (ngSubmit)="submitPayment()" class="flex flex-col gap-4">
-      <div class="flex gap-4">
+      <div>
         <label>申請金額
           <input pInputText type="number" [(ngModel)]="paymentAmount" name="paymentAmount" required (ngModelChange)="onPaymentAmountChange($event)" />
         </label>
-        <label>百分比
-          <input pInputText type="number" [(ngModel)]="paymentPercent" name="paymentPercent" required min="0" max="100" (ngModelChange)="onPaymentPercentChange($event)" />
-        </label>
+      </div>
+      <div>
+        <label>百分比: {{ paymentPercent }}%</label>
+        <p-slider name="paymentPercent" class="w-full" [(ngModel)]="paymentPercent" [min]="0.5" [max]="100" [step]="0.5" (ngModelChange)="onPaymentPercentChange($event)"></p-slider>
       </div>
       <label>備註
         <input pInputText [(ngModel)]="paymentNote" name="paymentNote" />
       </label>
       <div class="flex justify-end gap-2 mt-4">
-        <button pButton type="button" class="p-button-text" (click)="close()">取消</button>
-        <button pButton type="submit" [disabled]="!paymentAmount || !paymentPercent">送出</button>
+        <button pButton type="submit" class="p-button-text" [disabled]="!paymentAmount || !paymentPercent">送出</button>
+        <button pButton type="button" (click)="close()">取消</button>
       </div>
     </form>
   </div>
