--- a/src/app/components/contract/stepbutton/request/request.component.scss
+++ b/src/app/components/contract/stepbutton/request/request.component.scss
@@ -4,4 +4,11 @@
   gap: 1rem;
 
   /* 依賴內建樣式，保持極簡 */
+  p-slider {
+    margin-top: 0.25rem;
+  }
+  /* 每行區塊全寬，保持排版一致 */
+  form > div {
+    width: 100%;
+  }
 }
