--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -16,7 +16,7 @@
   <ng-template #panel>
     <div class="flex flex-col items-center justify-start h-full gap-2">
       <!-- 組織圖 -->
-      <app-organizational [contract]="selectedContract" [defaultLabel]="selectedContract?.projectName || '專案團隊'"></app-organizational>
+      <app-organizational [contract]="selectedContract"></app-organizational>
       <!-- 合約列表 Table -->
       <p-table
         [value]="contracts"
