--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -194,21 +194,23 @@
     Panel 3: 右側（歷程/事件紀錄）
   ====================== -->
   <ng-template #panel [stateKey]="'panel3'">
-    <div class="flex flex-col items-center justify-center h-full gap-2 w-full">
+    <div class="flex flex-col justify-between h-full w-full">
       <!-- 歷程 Timeline -->
-      <p-timeline [value]="selectedContract ? getEventTimeline(selectedContract) : []" align="alternate" *ngIf="selectedContract">
-        <ng-template pTemplate="content" let-item>
-          <div>
-            <div>{{ item.label }}</div>
-            <div class="text-xs text-gray-500">{{ item.date | date:'yyyy/MM/dd HH:mm' }}</div>
-          </div>
-        </ng-template>
-      </p-timeline>
+      <p-scrollPanel style="width:100%; height:70%;" *ngIf="selectedContract">
+        <p-timeline [value]="getEventTimeline(selectedContract)" align="alternate">
+          <ng-template pTemplate="content" let-item>
+            <div>
+              <div>{{ item.label }}</div>
+              <div class="text-xs text-gray-500">{{ item.date | date:'yyyy/MM/dd HH:mm' }}</div>
+            </div>
+          </ng-template>
+        </p-timeline>
+      </p-scrollPanel>
       <div *ngIf="!selectedContract" class="text-gray-500">請選擇合約以檢視歷程</div>
-      <div *ngIf="selectedContract" style="width:100%;">
+      <p-scrollPanel style="width:100%; height:200px;" *ngIf="selectedContract">
         <div class="font-bold mb-2">事件紀錄</div>
         <div *ngFor="let log of getEventLog(selectedContract)" class="text-xs mb-1">{{ log }}</div>
-      </div>
+      </p-scrollPanel>
     </div>
   </ng-template>
 </p-splitter>
