--- a/src/app/components/contract/stepbutton/messages/messages.component.html
+++ b/src/app/components/contract/stepbutton/messages/messages.component.html
@@ -1,5 +1,5 @@
 <div class="memo-panel flex flex-col h-full w-full p-2 gap-2">
-  <div class="flex-1 overflow-y-auto memo-list">
+  <p-scrollPanel style="flex:1; width:100%; height:100%;" class="memo-list">
     <ng-container *ngIf="loadingMessages">載入中...</ng-container>
     <ng-container *ngIf="!loadingMessages && messages.length === 0">不想記又怕忘</ng-container>
     <div *ngFor="let msg of messages" class="memo-item p-2 mb-2 rounded shadow-sm">
@@ -11,7 +11,7 @@
       </div>
       <div>{{ msg.message }}</div>
     </div>
-  </div>
+  </p-scrollPanel>
   <form class="flex gap-2 mt-2" (ngSubmit)="addMemo()">
     <input pInputText [(ngModel)]="newMessage" name="newMemo" placeholder="輸入備忘內容..." class="flex-1" [disabled]="!contract" />
     <button
