--- a/src/app/components/contract/contract.component.scss
+++ b/src/app/components/contract/contract.component.scss
@@ -90,3 +90,16 @@
   background-color: var(--surface-border);
   border-radius: 3px;
 }
+
+// 變更金額對話框樣式
+:host ::ng-deep .p-dialog .p-dialog-content {
+  padding: 1.5rem;
+}
+:host ::ng-deep .p-inputnumber,
+:host ::ng-deep .p-inputtextarea {
+  width: 100%;
+}
+:host ::ng-deep .p-button-text.p-0 {
+  padding: 0.25rem;
+  min-width: auto;
+}
