--- a/src/app/components/contract/stepbutton/request/request.component.html
+++ b/src/app/components/contract/stepbutton/request/request.component.html
@@ -3,12 +3,12 @@
     <form (ngSubmit)="submitPayment()" class="flex flex-col gap-4">
       <div>
         <label>申請金額
-          <input pInputText type="number" [(ngModel)]="paymentAmount" name="paymentAmount" required (ngModelChange)="onPaymentAmountChange($event)" />
+          <input pInputText type="number" step="0.01" [(ngModel)]="paymentAmount" name="paymentAmount" required (ngModelChange)="onPaymentAmountChange($event)" />
         </label>
       </div>
       <div>
         <label>百分比: {{ paymentPercent }}%</label>
-        <p-slider name="paymentPercent" class="w-full" [(ngModel)]="paymentPercent" [min]="0.5" [max]="100" [step]="0.5" (ngModelChange)="onPaymentPercentChange($event)"></p-slider>
+        <p-slider name="paymentPercent" class="w-full" [(ngModel)]="paymentPercent" [min]="0.01" [max]="100" [step]="0.01" (ngModelChange)="onPaymentPercentChange($event)"></p-slider>
       </div>
       <label>備註
         <input pInputText [(ngModel)]="paymentNote" name="paymentNote" />
