--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -61,15 +61,15 @@
                 <div>現行: {{ contract.contractAmount | number:'1.0-2' }}</div>
               </td>
               <td>
-                <div class="flex flex-col text-xs">
+                <div class="flex flex-col gap-1">
                   <ng-container *ngFor="let item of [
                     {label: '未開始', data: getProgressSummary(contract).notStarted},
                     {label: '進行中', data: getProgressSummary(contract).inProgress},
                     {label: '已完成', data: getProgressSummary(contract).completed}
                   ]">
-                    <div *ngIf="item.data.percent > 0" class="flex justify-between">
-                      <span>{{ item.label }}({{ item.data.count }})</span>
-                      <span>{{ item.data.percent }}%</span>
+                    <div *ngIf="item.data.percent > 0" class="flex items-center gap-2">
+                      <p-tag [value]="item.label + ' (' + item.data.count + ')'" [severity]="getStatusSeverity(item.label)"></p-tag>
+                      <span class="text-xs" [style.color]="getPercentColor(item.data.percent)">{{ item.data.percent }}%</span>
                     </div>
                   </ng-container>
                 </div>
