--- a/src/app/components/contract/stepbutton/messages/messages.component.html
+++ b/src/app/components/contract/stepbutton/messages/messages.component.html
@@ -1,7 +1,7 @@
 <div class="memo-panel flex flex-col h-full w-full p-2 gap-2">
   <p-scrollPanel style="flex:1; width:100%; height:100%;" class="memo-list">
     <ng-container *ngIf="loadingMessages">載入中...</ng-container>
-    <ng-container *ngIf="!loadingMessages && messages.length === 0">不想記又怕忘</ng-container>
+    <ng-container *ngIf="!loadingMessages && messages.length === 0">不想記又怕忘記</ng-container>
     <div *ngFor="let msg of messages" class="memo-item p-2 mb-2 rounded shadow-sm">
       <div class="text-xs font-bold mb-1">
         {{ msg.user }}
