--- a/src/app/components/contract/stepbutton/organizational/organizational.component.html
+++ b/src/app/components/contract/stepbutton/organizational/organizational.component.html
@@ -1,5 +1,5 @@
 <div class="w-full organization-chart-top">
-  <p-organizationChart [value]="chartData" [collapsible]="true" styleClass="w-full">
+  <p-organizationChart [value]="chartData" [collapsible]="true" styleClass="w-full" [selectionMode]="'multiple'">
     <ng-template let-node pTemplate="person">
       <div class="flex flex-col items-center">
         <ng-container *ngIf="!node.data.editing">
